docs: complete README

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 React Select Interview
 ======================
 
-A react interview question
+My solution to a react interview question taken from:
+
+https://www.reddit.com/r/reactjs/comments/181bwix/please_help_why_was_i_rejected_in_my_frontend_1st/
