docs: add quick start section

--- a/README
+++ b/README
@@ -4,3 +4,14 @@ React Select Interview
 My solution to a react interview question taken from:
 
 https://www.reddit.com/r/reactjs/comments/181bwix/please_help_why_was_i_rejected_in_my_frontend_1st/
+
+Quick Start
+-----------
+
+First time running this react app:
+    
+    yarn install
+
+Powering up the server:
+
+    yarn run dev
